--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
-
         <ul class="deck">
             <li class="card" type="diamond">
                 <i class="fa fa-diamond"></i>
@@ -81,7 +80,19 @@
             </li>
         </ul>
     </div>
+<!-- Trigger/Open The Modal -->
+<!-- <button id="myBtn">Open Modal</button>
+ -->
+<!-- The Modal -->
+<div id="myModal" class="modal">
 
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p class="congrats"></p>
+  </div>
+
+</div>
     <script src="js/app.js"></script>
 </body>
 </html>
